--- a/my-map-app/src/App.css
+++ b/my-map-app/src/App.css
@@ -171,9 +171,9 @@ body.sidebar-open {
 .map-search-box {
   position: absolute;
   top: 10px;
-  right: 2%;
+  right: 10px;
+  width: auto;
   max-width: 300px;
-  width: 100%;
   background-color: #fff;
   padding: 10px;
   border-radius: 10px;
@@ -184,7 +184,7 @@ body.sidebar-open {
 
 @media (max-width: 768px) {
   .map-search-box {
-    top: 70px;
+    top: 20px;
     width: 90%;
     max-width: 400px;
     left: 50%;
