--- a/my-map-app/src/App.css
+++ b/my-map-app/src/App.css
@@ -44,7 +44,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
-  padding: 25px;
+  padding: 15px;
   border-radius: 10px;
   border: 2px solid #000;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -60,6 +60,7 @@ h1 {
   margin-bottom: 30px;
   line-height: 1.0;
   animation: moveUp 2s forwards;
+  margin-top: 0;
 }
 
 p {
@@ -189,7 +190,7 @@ body.sidebar-open {
 
 @media (max-width: 768px) {
   .map-search-box {
-    top: 10px;
+    top: 13px;
     left: 50%;
     transform: translateX(-50%);
     width: 90%;
@@ -214,7 +215,7 @@ body.sidebar-open {
 
 .map-search-results {
   position: absolute;
-  top: 45px;
+  top: 48px;
   right: 10px;
   left: auto;
   background-color: #fff;
